# amr_oclone

./: .gitignore  .rosinstall  .rosinstall.bak  CMakeLists.txt  README.md
autonomous_mobile_robot_navigation/: CMakeLists.txt  package.xml
autonomous_mobile_robot_navigation/config/: controllers.yaml  controllers_hoverboard.yaml  ekf_localization.yaml
autonomous_mobile_robot_navigation/include/autonomous_mobile_robot_navigation/: robot_hardware_interface.h
autonomous_mobile_robot_navigation/include/hoverboard_driver/: config.h  hoverboard.h
autonomous_mobile_robot_navigation/launch/: amcl.launch  autonomous_mapping.launch  autonomous_nav.launch  autonomous_nav_2.launch  autonomous_nav_default.launch  autonomous_nav_dijkstra.launch  autonomous_nav_sidang.launch  check_urdf.launch  hector_mapping.launch  kinect_nav.launch  kinect_nav_sidang.launch  map_gmapping.launch  map_hector.launch  map_hector_kinect.launch  map_hector_lidar_only.launch  mapping.launch  mapping_gmapping.launch  move_base.launch  move_base_dijkstra.launch  move_base_kinect.launch  move_base_lidar.launch  rviz_view.launch  temp.txt  testing_map_size.launch
autonomous_mobile_robot_navigation/maps/: F3Sidang.yaml  GKMLt3.yaml  GedungA2.pgm  GedungA2.yaml  GedungA3.pgm  GedungA3.yaml  GedungA4.pgm  GedungA4.yaml  GedungA5.pgm  GedungA5.yaml  GedungA6.pgm  GedungA6.yaml  GedungANav.pgm  GedungANav.yaml  MapGedungA.pgm  MapGedungA.yaml  MapGedungA1_1.pgm  MapGedungA1_1.yaml  basemen_g_per1.yaml  basemen_g_per2_gagal.yaml  basemen_g_per3_gagal.yaml  basemen_g_per4_1_niceeeee.yaml  basemen_g_per4_niceeeee.yaml  basemen_g_per4_niceeeee_bersih.yaml  basemen_g_per4_niceeeee_edit_radikal.yaml  basemen_g_per4_niceeeee_perfect_cocok_nav.yaml  basemen_g_per4_niceeeee_perfect_kurang_tanjakan.yaml  basemen_g_per4_niceeeee_perfecttoooooo.yaml  gedungF4Sidang.yaml  robotik1.pgm  robotik1.yaml  robotikGKMTes.yaml  tangga1.pgm  tangga1.yaml  tangga2.pgm  tangga2.yaml  tesaja.yaml
autonomous_mobile_robot_navigation/maps/testing_map/: frames.gv  hector_kinect_robotik_1.yaml  hector_kinect_robotik_2.yaml  hector_kinect_robotik_3.yaml  hector_kinect_robotik_4.yaml  hector_lidar_robotik_1.yaml  hector_lidar_robotik_2.yaml  hector_lidar_robotik_3.yaml  hector_lidar_robotik_4.yaml  hector_lidar_robotik_5.yaml
autonomous_mobile_robot_navigation/param/: common_costmap.yaml  common_costmap_2.yaml  costmap_common_params.yaml  ekf_localization.yaml  global_costmap_params.yaml  global_planner.yaml  global_planner_params.yaml  local_costmap.yaml  local_costmap_2.yaml  local_costmap_params.yaml  local_planner.yaml  local_planner_params.yaml  move_base.yaml  move_base_params.yaml  planner.yaml  planner_params.yaml  teb_local_planner_params.yaml
autonomous_mobile_robot_navigation/param/amr/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
autonomous_mobile_robot_navigation/param/temp/: common_costmap.yaml  common_costmap_2.yaml  local_planner.yaml
autonomous_mobile_robot_navigation/param/tes_2/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  navfn_global_planner_params.yaml
autonomous_mobile_robot_navigation/rviz/: mapping_config.rviz  nav_config (copy).rviz  nav_config.rviz  rviz_config.rviz
autonomous_mobile_robot_navigation/scripts/: navfn.cpp  navfn_ros.txt
autonomous_mobile_robot_navigation/src/: i2c_ros.cpp  robot_hardware_interface_node.cpp
autonomous_mobile_robot_navigation/trash/: map_gmapping_hamdan.launch
autonomous_mobile_robot_navigation/urdf/: mobile_robot.xacro  mobile_robot_v2.xacro
cv_learning/: CMakeLists.txt  package.xml
freenect_stack/: .travis.yml
localization_data_pub/: CMakeLists.txt  package.xml
mobile_robot_autonomous_navigation/: CMakeLists.txt  package.xml
pcl_tester/: CMakeLists.txt
(+104 files in other folders)
