<?xml version="1.0"?>
<package format="2">
  <name>autonomous_mobile_robot_navigation</name>
  <version>0.0.2</version>
  <description>The AMR Navigation package</description>
  <maintainer email="bambanggunawan887@gmail.com">Bambang Gunawan</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>amcl</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>message_generation</depend>
  <depend>controller_manager</depend>
  <depend>gmapping</depend>
  <depend>move_base</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>control_toolbox</depend>
  <depend>map_server</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>hardware_interface</depend>
  <depend>laser_filters</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>rviz_imu_plugin</depend>
  <depend>robot_localization</depend>
  <depend>teb_local_planner</depend>
  <depend>dwa_local_planner</depend>
  <depend>global_planner</depend>
  <depend>twist_mux</depend>
  <depend>nmea_navsat_driver</depend>
  <depend>moveit_ros_planning_interface</depend>
</package>
